fix:adjust CSS layout for better spacing and sizing

--- a/src/layout/privateLayout/AdminLayout.scss
+++ b/src/layout/privateLayout/AdminLayout.scss
@@ -5,8 +5,13 @@
   display: flex;
   padding-top: 20px;
   flex-direction: column;
-  gap: 50px;
+  gap: 20px;
   overflow: hidden;
-  height: calc(100vh - 100px);
-  @include responsive-container;
+  height: calc(100vh - 80px);
+  h3{
+    font-size: 24px;
+  }
+  @include mobile{
+    align-items: center;
+  }
 }
