--- a/src/layout/privateLayout/components/NavbarAdmin.scss
+++ b/src/layout/privateLayout/components/NavbarAdmin.scss
@@ -94,6 +94,12 @@
 
             }
           }
+          @include mobile{
+            &:nth-child(3){
+              display:block;
+            }
+            display:none;
+          }
         }
       }
 
