--- a/src/pages/public/checkout/Checkout.scss
+++ b/src/pages/public/checkout/Checkout.scss
@@ -1,84 +1,165 @@
+@use "../../../index.scss" as *;
 .checkout {
-    height: calc(100vh - 112px);
-    scroll-margin-top: 80px;
+  height: auto;
+  box-sizing: border-box;
+  padding: 1rem;
 
-    .wrapper {
+  .wrapper {
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+    gap: 20px;
+    height: 100%;
+
+    h2 {
+      justify-self: left;
+      margin-bottom: 20px;
+      // color: #f2f2f2;
+      font-size: calc(1.3vw + 1rem);
+      @include mobile{
+        justify-self: center;
+      }
+    }
+    .top {
+      height: 100%;
+      display: flex;
+      gap: 50px;
+      .left {
+        flex: 1;
+
+        .checkout-form {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+
+          .item {
+            display: flex;
+            font-size: 16px;
+            flex-direction: column;
+            width: 100%;
+            gap: 5px;
+
+            .forminput {
+              box-sizing: border-box;
+              border-radius: 10px;
+              padding:10px;
+              border: 1px solid rgba(51, 55, 64, 0.3);
+              background: transparent;
+              height: 47px;
+              font-size: 14px;
+              outline: transparent;
+              caret-color: #22a2f2;
+              appearance: none;
+            }
+
+            .forminput:last-child {
+              resize: none;
+            }
+          }
+
+          .item.customer {
+            display: flex;
+            flex-direction: row;
+
+            .form-item{
+              width: 50%;
+              display: flex;
+              flex-direction: column;
+            }
+          }
+        }
+      }
+
+      .right {
+        flex: 1;
+        .additional-info {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          .item {
+            font-size: 16px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+          }
+        }
+      }
+      @include mobile{
+        flex-direction:column;
+      }
+    }
+    .bottom {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      .payment-method {
+        border-radius: 10px;
         display: flex;
         flex-direction: column;
+        justify-content: center;
         gap: 20px;
-        height: 100%;
+        background-color: #f9f9f9;
+        padding: 15px;
+        .payment-item {
+          width: 100px;
+          display: block;
+          position: relative;
+          padding-left: 20px;
+          cursor: pointer;
+          font-size: 16px;
+          -webkit-user-select: none;
+          -moz-user-select: none;
+          -ms-user-select: none;
+          user-select: none;
 
-        h2 {
-            justify-self: center;
-            margin-bottom:20px;
-            // color: #f2f2f2;
-            font-size: calc(1.3vw + 1rem);
+          input[type="radio"] {
+            -webkit-appearance: none;
+            appearance: 0;
+            margin: 0;
           }
-        .top {
-            display: flex;
-            gap: 20px;
-            .left {
-                flex: 1;
-
-                .checkout-form {
-                    display: flex;
-                    flex-direction: column;
-                    gap: 10px;
-
-                    .item {
-                        display: flex;
-                        flex-direction: column;
-                        width: 100%;
-                        gap: 5px;
-
-                        .forminput {
-                            box-sizing: border-box;
-                            border-radius: 10px;
-                            padding: 5px 10px;
-                            border: 1px solid rgba(51, 55, 64, 0.3);
-                            background: transparent;
-                            height: 42px;
-                            font-size: 14px;
-                            outline: transparent;
-                            caret-color: #22a2f2;
-                            appearance: none;
-                        }
-
-                        .forminput:last-child {
-                            resize: none;
-                        }
-                    }
-
-                    .item.customer {
-                        display: flex;
-                        flex-direction: row;
-
-                        .name,
-                        .last-name {
-                            width: 50%;
-                            display: flex;
-                            flex-direction: column;
-                        }
-
-
-                        // background: #000;
-                    }
-                }
-            }
-
-            .right {
-                flex: 1;
-                .additional-info{
-                    display: flex;
-                    flex-direction: column;
-                    gap: 20px;
-                    .item{
-                        display: flex;
-                        flex-direction: column;
-                        gap: 10px;
-                    }
-                }
-            }
+          .radio-label {
+            position: absolute;
+            top: 42%;
+            transform: translateY(-50%);
+            left: 0;
+            height: 12px;
+            width: 12px;
+            border-radius: 50%;
+            background-color: #ccc;
+          }
+          input:checked ~ .radio-label {
+            background-color: #22a2f2;
+          }
         }
+        .about-card-payment{
+          box-sizing: border-box;
+          position: relative;
+          width: 100%;
+          height: 50px;
+          display: flex;
+          align-items: center;
+          padding: 10px;
+          margin:0;
+          font-weight: 500;
+          background-color: #e0e0e0;
+          border-radius:10px;
+          .clippy{
+            position: absolute;
+            height:15px;
+            top:-13px;
+            left: 20px;
+            width:20px;
+            background-color: #e0e0e0;
+            clip-path: polygon(50% 0%, 0% 100%, 100% 100%);          }
+          .advice{
+            font-weight: 500
+          }
+          @include mobile{
+          height: 80px;
+          }
+        }
+      }
     }
+    @include responsive-container;
+  }
 }
